# peri

./: .gitignore  CHANGELOG.md  CLAUDE.md  CORE_VERIFY.md  README.md  README_EN.md  progress.md
.github/workflows/: release-npm.yml
acpx-g/: progress.md
acpx-g/static/: editor.css  editor.js  run-detail.js
npm/: README.md  install.js  package.json
peri-acp/tests/: integration_test.rs
peri-middlewares/src/: compact_middleware.rs
peri-tui/src/: acp_server.rs  acp_stdio.rs  alloc_config.rs  cli_print.rs  main.rs
peri-tui/tests/: double_storage_bytes.rs  headless_large_toolresult_e2e.rs
perihelion-widgets/src/: scrollable.rs
reviews/: 2026-05-29-origin-messages-rename.md
rust-agent-middlewares/: Cargo.toml
rust-agent-middlewares/src/: lib.rs
rust-agent-middlewares/src/hitl/: mod.rs
rust-agent-middlewares/src/lsp/: formatters.rs
rust-agent-middlewares/src/mcp/: client.rs  config.rs  mod.rs  tool_bridge.rs
rust-agent-middlewares/src/plugin/: config.rs  installer.rs  loader.rs  marketplace.rs  middleware.rs  mod.rs  types.rs
rust-agent-middlewares/src/skills/: mod.rs
rust-agent-middlewares/src/subagent/: mod.rs
rust-agent-middlewares/src/tool_search/: core_tools.rs  execute_tool.rs  search_tool.rs
rust-agent-tui/src/: event.rs  main.rs  prompt.rs
side-projects/llm-gateway/: index.test.ts  index.ts
spec/archive-issues/: 2026-05-11-auto-compact-no-resubmit.md  2026-05-11-background-agent-missing-tools.md  2026-05-11-context-usage-miscalculation-openai-compatible.md  2026-05-11-separate-test-code-from-impl.md  (+39 more)
spec/global/: index.md  (+2 more)
(+146 files in other folders)
