[package]
name = "rust-agent-middlewares"
version = "0.1.0"
edition = "2021"
description = "Rust Agent middleware implementations, aligned with @langgraph-js/agent-middlewares"
license = "MIT"

[dependencies]
rust-create-agent = { path = "../rust-create-agent" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full", "process"] }
glob = "0.3"
walkdir = "2.4"
ignore = "0.4"
gray_matter = "0.3"
dirs-next = "2"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
croner = "3"
tracing = "0.1"
parking_lot = "0.12"
grep = "0.4"
num_cpus = "1"
rmcp = { version = "1.6", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
reqwest = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
